Renaming, and fixing layout and spacing on responsive screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,8 @@ $body-font-color: #ffffff;
 $link-hover-color: #d60002;
 $light: #ffce4d;
 $header-height: 50px;
-$footer: #1f1f1f;
+$footer: #8c8c8c;
+$footer-height: 250px;
 
 $foundation-palette: (
   primary: $primary-color,
